package map;

public interface IMapable {
    public void move();
    public Coordinates getCoordinates();
    public void setCoordinates(Coordinates newCoords);
}