package map;

public interface IMovable {
    public Coordinates move(Coordinates currentCoordinates);
}