package map;

public interface IPrintable {
    public String toString();
    public String getId();
    public char getRepresentation();
}